--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moviedb",
-  "homepage": "https://FARZINzx.github.io/Movie-Streaming/",
+  "homepage": "https://FARZINzx.github.io//",
   "private": true,
   "version": "0.0.0",
   "type": "module",
